--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,43 +1,74 @@
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #ffffff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 9999;
+}
+
+.logo-container {
+  padding: 10px;
+}
+
+.logo {
+  height: 100px;
+}
+
+.nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  padding-right: 15px;
+}
+
+.nav-item {
+  margin-left: 25px;
+}
+
+.nav-item a {
+  text-decoration: none;
+  color: #333333;
+  font-size: large;
+  font-weight: 500;
+}
+
+.nav-item a:hover {
+  color: #ff0000;
+}
+
+.menu-toggle {
+  display: none; /* Oculta o ícone do menu em telas maiores */
+  cursor: pointer;
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: #333;
+  margin: 5px 0;
+}
+
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: block; /* Exibe o ícone do menu em telas menores */
   }
-  
-  .logo-container {
-    padding: 10px;
-  }
-  
-  .logo {
-    height: 100px;
-  }
-  
-  .nav {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  
+
   .nav-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+    display: none; /* Oculta a lista de links em telas menores */
   }
-  
-  .nav-item {
-    margin-left: 10px;
+
+  .nav.open .nav-list {
+    display: flex; /* Exibe a lista de links quando o ícone é clicado */
+    flex-direction: column;
+    align-items: flex-start;
   }
-  
-  .nav-item a {
-    text-decoration: none;
-    color: #333333;
-  }
-  
-  .nav-item a:hover {
-    color: #ff0000;
-  }
+}
