--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -3,6 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 120px;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   z-index: 9999;
