Alterações no header, inclusão de ícone

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -17,6 +17,11 @@
   height: 100px;
 }
 
+.user {
+  height: 20px;
+  margin-top: -5px;
+}
+
 .nav {
   display: flex;
   justify-content: flex-end;
