--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -8,6 +8,24 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   z-index: 9999;
 }
+/*
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .nav-links {
+    display: none;
+  }
+
+  .login-icon {
+    margin-right: 20px; 
+  }
+}
+*/
 
 .logo-container {
   padding: 10px;
@@ -17,7 +35,7 @@
   height: 100px;
 }
 
-.user {
+.login-icon {
   height: 20px;
   margin-top: -5px;
 }
