--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,49 +1,18 @@
 .header {
+  display: flex;
   position: fixed;
   top: 0;
-  left: 0;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
   width: 100%;
   height: 120px;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 9999;
-}
-/*
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-}
-
-@media screen and (max-width: 768px) {
-  .nav-links {
-    display: none;
-  }
-
-  .login-icon {
-    margin-right: 20px; 
-  }
-}
-*/
-
-.logo-container {
-  padding: 10px;
 }
 
 .logo {
-  height: 100px;
-}
-
-.login-icon {
-  height: 20px;
-  margin-top: -5px;
-}
-
-.nav {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  height: 120px;
 }
 
 .nav-list {
@@ -69,8 +38,24 @@
   color: #ff0000;
 }
 
+.login a {
+  text-decoration: none;
+  color: #333333;
+  font-size: large;
+  font-weight: 500;
+}
+
+.login a:hover {
+  color: #ff0000;
+}
+
+.login-icon {
+  height: 20px;
+  margin-top: -5px;
+}
+
 .menu-toggle {
-  display: none; /* Oculta o ícone do menu em telas maiores */
+  display: none;
   cursor: pointer;
 }
 
@@ -83,16 +68,10 @@
 
 @media (max-width: 768px) {
   .menu-toggle {
-    display: block; /* Exibe o ícone do menu em telas menores */
+    display: block; 
   }
 
   .nav-list {
-    display: none; /* Oculta a lista de links em telas menores */
-  }
-
-  .nav.open .nav-list {
-    display: flex; /* Exibe a lista de links quando o ícone é clicado */
-    flex-direction: column;
-    align-items: flex-start;
+    display: none; 
   }
 }
