--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -1,4 +1,15 @@
-.Home-busca {
+.container-busca {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.busca {
     background-color: #677081;
-    min-height: 15vh;
+    height: 100px;
+    width: 50vw;
+}
+
+@media (max-width: 768px) {
 }
