Centralização da page (temporario)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,6 +24,10 @@ body {
   margin-right: 15vh;
   background-color: #282c34;
   min-height: calc(100vh - 120px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 768px) {
