--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -1,3 +1,20 @@
+.login{
+    margin: 0;
+    padding: 0;
+}
+
+.page{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #666;
+}
+
+
 .login-cadastro {
     font-size: large;
     font-weight: 500;
@@ -11,3 +28,44 @@
 .login-cadastro-link:hover {
     color: #ff0000;
 }
+
+.formLogin {
+    display: flex;
+    flex-direction: column;
+    background-color:rgb(73, 69, 69);
+    border-radius: 7px;
+    padding: 40px;
+    box-shadow: 10px 10px 40px rgba(0, 0, 0, .4);
+    gap: 5px;
+    width: 35%;
+}
+
+.formLogin h1{
+    padding: 0;
+    margin: 0;
+    font-weight: 500;
+    font-size: 2.3em;
+    color:rgb(255, 255, 255)
+}
+
+.formLogin p{
+    display: inline-block;
+    font-size: 14px;
+    margin-bottom: 25px;
+}
+
+.formLogin input {
+    padding: 15px;
+    font-size: 14px;
+    border: 1px solid #106caa;
+    margin-bottom: 20px;
+    margin-top: 5px;
+    border-radius: 4ox;
+    transition: all linear 160ms;
+    outline: none;
+}
+
+.formLogin input:focus {
+    border: 1px solid #4a6ee2;
+}
+
