--- a/src/styles/pages/login.css
+++ b/src/styles/pages/login.css
@@ -1,9 +1,5 @@
-.login{
-    margin: 0;
-    padding: 0;
-}
-
-.page{
+/* Configuração do .page (login.css) está igual ao .Page (global.css): Deixar por padrão o page do global */
+/*.page{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,19 +8,14 @@
     width: 100%;
     height: 100vh;
     background-color: #666;
-}
+}*/
 
-.login-cadastro {
-    font-size: large;
-    font-weight: 500;
-}
-
-.login-cadastro-link {
+.cadastroLink {
     text-decoration: none;
     color: #61dafb;
 }
 
-.login-cadastro-link:hover {
+.cadastroLink:hover {
     color: #ff0000;
 }
 
@@ -51,6 +42,7 @@
     display: inline-block;
     font-size: 14px;
     margin-bottom: 25px;
+    font-weight: 500;
 }
 
 .formLogin input {
