--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -9,6 +9,7 @@
   height: 120px;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 9999;
 }
 
 .logo {
@@ -65,6 +66,67 @@
   background-color: #333;
   margin: 5px 0;
 }
+
+.menu-sidebar {
+  position: fixed;
+  top: 0;
+  left: -300px;
+  width: 300px;
+  height: 100%;
+  background-color: #f1f1f1;
+  transition: left 0.3s ease;
+}
+
+.menu-sidebar.open {
+  left: 0;
+}
+
+.sidebar-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 70%;
+  height: 100%;
+  background-color: #f1f1f1;
+  padding: 20px;
+}
+
+.sidebar-content a {
+  display: block;
+  margin-bottom: 10px;
+  text-decoration: none;
+  color: #333333;
+  font-size: large;
+  font-weight: 500;
+}
+
+/*#sidebar {
+  position: fixed;
+  top: 0;
+  left: -250px; 
+  width: 250px;
+  height: 100%;
+  background-color: #f1f1f1;
+  transition: left 0.3s ease;
+}
+
+#sidebar.open {
+  left: 0; 
+}
+
+#sidebar ul {
+  list-style: none;
+  padding: 0;
+}
+
+#sidebar li {
+  padding: 10px;
+}
+
+#sidebar li a {
+  text-decoration: none;
+  color: #333;
+}*/
 
 @media (max-width: 768px) {
   .menu-toggle {
