--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -72,7 +72,8 @@
   top: 0;
   left: -300px;
   width: 300px;
-  height: 100%;
+  margin-top: 120px;
+  height: calc(100vh - 120px);
   background-color: #f1f1f1;
   transition: left 0.3s ease;
 }
@@ -85,7 +86,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 70%;
+  width: 100%;
   height: 100%;
   background-color: #f1f1f1;
   padding: 20px;
@@ -99,34 +100,6 @@
   font-size: large;
   font-weight: 500;
 }
-
-/*#sidebar {
-  position: fixed;
-  top: 0;
-  left: -250px; 
-  width: 250px;
-  height: 100%;
-  background-color: #f1f1f1;
-  transition: left 0.3s ease;
-}
-
-#sidebar.open {
-  left: 0; 
-}
-
-#sidebar ul {
-  list-style: none;
-  padding: 0;
-}
-
-#sidebar li {
-  padding: 10px;
-}
-
-#sidebar li a {
-  text-decoration: none;
-  color: #333;
-}*/
 
 @media (max-width: 768px) {
   .menu-toggle {
