--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,6 +31,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-height: calc(100vh - 120px);
 }
 
 @media (max-width: 768px) {
