--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -14,3 +14,14 @@
 .slick-next {
     right: 10px;
 }
+
+.Home-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.grid {
+    display: grid;
+}
