--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,8 +20,8 @@ body {
 }
 
 .Page {
-  margin-left: 15vh;
-  margin-right: 15vh;
+  margin-left: 5vw;
+  margin-right: 5vw;
   background-color: #282c34;
   min-height: calc(100vh - 120px);
 }
@@ -36,7 +36,7 @@ body {
 
 @media (max-width: 768px) {
   .Page {
-    margin-left: 2.5vh;
-    margin-right: 2.5vh;
+    margin-left: 2.5vw;
+    margin-right: 2.5vw;
   }
 }
