Ajuste no padding do container-busca

--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -1,7 +1,7 @@
 .container-busca {
     background-color: #494545a9;
     width: 100%;
-    padding: 20px;
+    padding-top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
